package edu.austral.ingsis.clifford.node;

public interface Node {
  String getName();

  Directory getParent();
}
