
@startuml

interface Node {
    + String getName()
    + Directory getParent()
}

class VirtualFileSystem {
    - Node root
    - Node current
    + void execute(String command)
}

class Directory {
    - String name
    - List<Node>
    + String getName()
    + Directory getParent()
    + void add(Node node)
    + void remove(Node node)
    + List<Node> getChildren()
}

class File {
    - String name
    + String getName()
    + Directory getParent()
}

Node <|.. Directory
Node <|.. File

VirtualFileSystem *- Node
Command <- VirtualFileSystem
Node --* Directory


interface Command {
    + void execute()
}

class ListPath {
    + void execute()
}

class ListChildren{
    + void execute()
}

class ChangeDirectory {
    + void execute()
}

class MakeDirectory {
    + void execute()
}

class Remove {
    + void execute()
}

class Touch {
    + void execute()
}

Command <|.. ListPath
Command <|.. ListChildren
Command <|.. ChangeDirectory
Command <|.. MakeDirectory
Command <|.. Remove
Touch .|> Command
@enduml
